# lingshu-cil

./: .gitignore  ARCHITECTURE_REVIEW.md  Cargo.toml  cil.sh
.cargo/: config.toml
src/: agent.rs  app.rs  checkpoint.rs  cil.rs  cmds.rs  commands.rs  context.rs  context_selector.rs  llm.rs  logging.rs  main.rs  markdown.rs  mcp.rs  model.rs  patch.rs  session.rs  task.rs  tools.rs  verifier.rs
src/tools/: diagnose.rs  file.rs  git.rs  mod.rs  search.rs  shell.rs
