[package]
name = "lingshu-cil"
version = "0.2.2-ds"
edition = "2021"
description = "LingShu CIL - Context-aware Interactive LLM assistant + MCP metadata server"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["blocking", "stream", "json"] }
tokio = { version = "1", features = ["rt", "macros"] }

# Syntax highlighting for TUI code blocks
syntect = { version = "5", default-features = false, features = ["default-fancy", "default-syntaxes", "default-themes"] }

# Utilities
chrono = "0.4"
anyhow = "1"
walkdir = "2"
dirs = "5"

# Fuzzy finder for context
fuzzy-matcher = "0.3"

# UUID for export filenames
uuid = { version = "1", features = ["v4"] }
