[package]
name = "lingshu-cil"
version = "0.3.0"
edition = "2021"
description = "LingShu CIL - AI coding assistant (like Claude Code / Codex CLI)"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Utilities
chrono = "0.4"
anyhow = "1"
walkdir = "2"
dirs = "5"

# Fuzzy finder for context
fuzzy-matcher = "0.3"
